<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/feed_card_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardElevation="2dp">

        <!-- Separator -->
        <View
            android:layout_marginBottom="@dimen/default_space"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/darkDividerColor" />

        <!-- Name and Amount -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/default_space"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/default_space">

            <TextView
                android:layout_marginTop="@dimen/default_space"
                android:id="@+id/food_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/food_name"
                android:fontFamily="@string/primaryFont"
                android:textSize="@dimen/primaryFontSize"
                android:textColor="@color/primaryText"/>

            <TextView
                android:id="@+id/food_amount"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/food_amount"
                android:fontFamily="@string/secondaryFont"
                android:textSize="@dimen/secondaryTextSize"
                android:textColor="@color/secondaryText"/>

            <!-- Separator -->
            <View
                android:layout_marginTop="@dimen/default_space"
                android:layout_marginBottom="@dimen/default_space"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/dividerColor" />

            <!-- Text nutrients -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10.5">

                <TextView
                    android:id="@+id/energy_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/energy_text"
                    android:layout_weight="3"
                    android:fontFamily="@string/primaryFont"
                    android:textSize="@dimen/primaryFontSize"
                    android:textColor="@color/primaryText"/>

                <TextView
                    android:id="@+id/carb_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/carb_text"
                    android:layout_weight="2.5"
                    android:fontFamily="@string/primaryFont"
                    android:textSize="@dimen/primaryFontSize"
                    android:textColor="@color/primaryText"/>

                <TextView
                    android:id="@+id/prot_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/prot_text"
                    android:layout_weight="2.5"
                    android:fontFamily="@string/primaryFont"
                    android:textSize="@dimen/primaryFontSize"
                    android:textColor="@color/primaryText"/>

                <TextView
                    android:id="@+id/fat_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/fat_text"
                    android:layout_weight="2.5"
                    android:fontFamily="@string/primaryFont"
                    android:textSize="@dimen/primaryFontSize"
                    android:textColor="@color/primaryText"/>

            </LinearLayout>

            <!-- Value nutrients -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10.5">

                <TextView
                    android:id="@+id/energy_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/energy_value"
                    android:layout_weight="3.0"
                    android:fontFamily="@string/secondaryFont"
                    android:textSize="@dimen/secondaryTextSize"
                    android:textColor="@color/secondaryText"/>

                <TextView
                    android:id="@+id/carb_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/carb_value"
                    android:layout_weight="2.5"
                    android:fontFamily="@string/secondaryFont"
                    android:textSize="@dimen/secondaryTextSize"
                    android:textColor="@color/secondaryText"/>

                <TextView
                    android:id="@+id/prot_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/prot_value"
                    android:layout_weight="2.5"
                    android:fontFamily="@string/secondaryFont"
                    android:textSize="@dimen/secondaryTextSize"
                    android:textColor="@color/secondaryText"/>

                <TextView
                    android:id="@+id/fat_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/fat_value"
                    android:layout_weight="2.5"
                    android:fontFamily="@string/secondaryFont"
                    android:textSize="@dimen/secondaryTextSize"
                    android:textColor="@color/secondaryText"/>

            </LinearLayout>

        </LinearLayout>



    </android.support.v7.widget.CardView>
</LinearLayout>